name:                dispatch-common
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/Lupino/dispatch-common#readme
license:             BSD3
license-file:        LICENSE
author:              Li Meng Jun
maintainer:          lmjubuntu@gmail.com
copyright:           MIT
category:            value
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Dispatch.Types.OrderBy
                     , Dispatch.Types.ListResult
                     , Dispatch.Types.Result

                     , Dispatch.Utils.JSON
                     , Dispatch.Utils.Scotty
                     , Dispatch.Utils.Signature
                     , Dispatch.Config.MySQLConfig
                     , Dispatch.Config.RedisConfig
                     , Dispatch.Config.InfluxConfig

  build-depends:       base >= 4.7 && < 5
                     , hashable
                     , unordered-containers
                     , aeson
                     , text
                     , http-types
                     , scotty
                     , cryptohash
                     , hex
                     , bytestring
                     , vector
                     , byteable
                     , resource-pool
                     , mysql-simple
                     , time

                     , hedis
                     , network

                     , lens
                     , influxdb
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lupino/dispatch-common
