name:                psql-utils
version:             0.2.0.1
synopsis:            PostgreSQL Simple util tools.
description:         An easy way to use postgresql-simple library.
homepage:            https://github.com/Lupino/yuntan-common/tree/master/psql-utils#readme
license:             BSD3
license-file:        LICENSE
author:              Li Meng Jun
maintainer:          lmjubuntu@gmail.com
copyright:           MIT
category:            Data,PostgreSQL
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10


library
  hs-source-dirs:      src
  exposed-modules:     Database.PSQL.Config
                     , Database.PSQL.Types
                     , Database.PSQL.Gen
                     , Database.PSQL.Version
                     , Database.PSQL.Exc
                     , Database.PSQL.Select
                     , Database.PSQL.Util
                     , Database.PSQL.Types.From
                     , Database.PSQL.Types.Size
                     , Database.PSQL.Types.TablePrefix
                     , Database.PSQL.Class.HasPSQL
                     , Database.PSQL.Class.HasOtherEnv
                     , Database.PSQL.Types.PSQL
                     , Database.PSQL.Types.SimpleEnv
                     , Database.PSQL.Types.GroupBy
                     , Database.PSQL.Types.OrderBy
                     , Database.PSQL.Types.TableName
                     , Database.PSQL.Types.Column
  build-depends:       base >= 4.7 && < 5
                     , resource-pool
                     , aeson
                     , postgresql-simple
                     , hashable
                     , bytestring
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lupino/yuntan-common
