name:                yuntan-common-scotty
version:             0.1.0.0
synopsis:            The common utils for haskell program.
description:         Please see README.md
homepage:            https://github.com/Lupino/yuntan-common#readme
license:             BSD3
license-file:        LICENSE
author:              Li Meng Jun
maintainer:          lmjubuntu@gmail.com
copyright:           MIT
category:            value
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10


library
  hs-source-dirs:      src
  exposed-modules:     Yuntan.Utils.Scotty
  build-depends:       base >= 4.7 && < 5
                     , http-types
                     , aeson
                     , scotty
                     , text
                     , yuntan-common-result
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lupino/yuntan-common
